Fixed information size

--- a/src/components/Information/information.module.css
+++ b/src/components/Information/information.module.css
@@ -1,13 +1,17 @@
 .information{
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     background-color: var(--information);
     padding: 5.21vh 0;
+    height: 123px;
 }
 
 .information div{
     display: flex;
+    height: max-content;
 }
+
 
 .information p{
     display: block;
