Offer catalog styles

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   --light-blue: #C7F3FD;
   --footer-link: #3B3B3B;
   --information: rgba(50, 209, 247,0.63);  
+  --background-offers: rgba(244, 246, 250,0.48);
   
 }
 
