--- a/src/components/OfferCatalog/offerCatalog.module.css
+++ b/src/components/OfferCatalog/offerCatalog.module.css
@@ -6,7 +6,7 @@
 }
 
 .Offers_banner{
-    width: 45.75vw;
+    width: 50%;
     height: 28vh;
     max-height: 215px;
     max-width: 625px;
@@ -19,31 +19,31 @@
 
 
 .Offers_banner img{
+    object-fit: contain;
     width: 100%;
     height: 100%;
 }
 
 .Offers_product_container{
     display: flex;
+    align-items: center;
     justify-content: space-between;
-    width: max-content;
-    height: 27vh;
+    width: 50%;
+    height: 50%;
     max-height: 207px;
 }
 
 
 .Offers_product{
-    width: 18.74vw;
-    height: 26.30vh;
+    width: 50%;
     max-width: 256px;
     max-height: 201px;
-    background-color: var(--background-offers);
+    background-color: red;
     box-shadow: 0px 3px 6px #00000029;
     border-radius: 20px;
     display: flex;
     justify-content: center;
     cursor: pointer;
-
 }
 
 .Offers_product:first-of-type{
@@ -51,8 +51,8 @@
 }
 
 .Offers_product img{
-    height: 90%;
-    align-self: center;
+    width: 90%;
+    object-fit: contain;
 }
 
 .Offers_product_img_left:first-of-type{
