--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -1,63 +1,117 @@
-.footer{
-    padding-top: 28px ;
-    max-height: 278px;
+.footer {
+  padding-top: 28px;
+  max-height: 278px;
 }
-.brandSection{
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.brandSection h2{
-    color: var(--main-color);
-    font-size: 20px;
-    font-family: Poppins; 
-    font-weight: 600;
-    cursor: default;
+.brandSection {
+  display: flex;
+  justify-content: space-evenly;
 }
 
-.brandSection h2 span{
-    display: inline;
-    font-weight: bold;
+.brandSection h2 {
+  color: var(--main-color);
+  font-size: 20px;
+  font-family: Poppins;
+  font-weight: 600;
+  cursor: default;
 }
 
-.brandSection h2:last-child{
-    margin-top: 15px;
+.brandSection h2 span {
+  display: inline;
+  font-weight: bold;
 }
 
-
-.footerSection{
-    text-align: center;
-    margin-top: 33px;
-    margin-bottom: 18px;
+.brandSection h2:last-child {
+  margin-top: 15px;
 }
 
-.footerSection h3{
-    display: inline;
-    font-weight: normal;
-    font-size: 14px;
-    margin-right: 7px;
+.footerSection {
+  text-align: center;
+  margin-top: 33px;
+  margin-bottom: 18px;
 }
 
-.footer__flex_item ul{
-    margin-top: 15px;
+.footerSection h3 {
+  display: inline;
+  font-weight: normal;
+  font-size: 14px;
+  margin-right: 7px;
 }
 
-.footer__flex_item ul li{
+.footer__flex_item ul {
+  margin-top: 15px;
+}
+
+.footer__flex_item ul li {
+  font-size: 13px;
+  color: var(--footer-link);
+}
+
+.footer__flex_item ul li a {
+  font-size: 14px;
+  color: var(--footer-link);
+}
+
+.social_network {
+  margin-top: 15px;
+}
+
+.footer__flex_item:last-child img {
+  margin-top: 10px;
+  margin-right: 15px;
+}
+
+.responsive__footer_details,
+.responsive_brandSection hr {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .footer__flex_item img,
+  .brandSection,
+  .footerSection {
+    display: none;
+  }
+
+  .responsive_brandSection hr {
+    display: block;
+  }
+
+  .responsive__footer_details {
+    display: block;
+    margin: 10px 23px;
+  }
+
+  .responsive__footer_details ul {
+    margin-top: 10px;
+  }
+
+  .responsive__footer_details ul li {
     font-size: 13px;
     color: var(--footer-link);
-}
+  }
 
-.footer__flex_item ul li a{
+  .responsive__footer_details ul li a {
     font-size: 14px;
     color: var(--footer-link);
-}
+  }
 
-.social_network{
-    margin-top: 15px;
-}
+  .responsie__footer_summary {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+  }
 
+  .responsie__footer_summary h2 {
+    color: var(--main-color);
+    font-size: 17px;
+    font-weight: bold;
+  }
 
-.footer__flex_item:last-child img{
-    margin-top: 10px;
-    margin-right: 15px;
+  .footerSection {
+    display: block;
+  }
+
+  .footerSection h3 {
+    font-size: 12px;
+  }
 }
