--- a/src/components/Newsletter/newsletter.module.css
+++ b/src/components/Newsletter/newsletter.module.css
@@ -1,54 +1,93 @@
-.section{
-    display: flex;
-    justify-content: space-evenly ;
-    background-color: var(--main-color);
-    padding-top: 31px;
-    min-height: 128px;
+.section {
+  display: flex;
+  justify-content: space-evenly;
+  background-color: var(--main-color);
+  padding-top: 31px;
+  min-height: 128px;
 }
 
-.section_left h2{
-    color: #FFFFFF;
-    font-family: Poppins;
-    font-weight: bold;
-    font-size: 26px;
+.section_left h2 {
+  color: #ffffff;
+  font-family: Poppins;
+  font-weight: bold;
+  font-size: 26px;
 }
 
-.section_left p{
-    color: #FFFFFF;
-    font-size: 18px;
+.section_left p {
+  color: #ffffff;
+  font-size: 18px;
 }
 
-.section_right input{
-    background-color: #FFFFFF;
-    border: 0.75px solid #FFFFFF;
-    border-radius: 19px;
-    width: 23.72vw;
-    height: 38px;
-    margin-right: 1.32vw;
-    padding-left: 21px;
-    outline: none;
-    font-size: 15px;
-
+.section_right input {
+  background-color: #ffffff;
+  border: 0.75px solid #ffffff;
+  border-radius: 19px;
+  width: 23.72vw;
+  height: 38px;
+  margin-right: 1.32vw;
+  padding-left: 21px;
+  outline: none;
+  font-size: 15px;
 }
 
-.section_right{
+.section_right {
+  text-align: center;
+}
+
+.section_right button {
+  border: 1px solid #f4f6fa;
+  width: 23.72vw;
+  height: 38px;
+  border-radius: 19px;
+  font-size: 16px;
+  background-color: var(--main-color);
+  color: #ffffff;
+  font-weight: bold;
+}
+
+.section_right p {
+  margin-top: 11px;
+  font-size: 13px;
+  color: #ffffff;
+}
+
+@media screen and (max-width: 768px) {
+  .section_right p {
+    display: none;
+  }
+  .section {
+    display: block;
+    padding-top: 16px;
     text-align: center;
-}
+    min-height: 199px;
+  }
 
-.section_right button{
-    border: 1px solid #F4F6FA;
-    width: 23.72vw;
-    height: 38px;
-    border-radius: 19px;
+  .section_left h2 {
+    font-size: 18px;
+  }
+
+  .section_left p {
+    font-size: 14px;
+  }
+
+
+  .section_right input {
+    width: 85vw;
+    max-width: 324px;
+    padding-left: 21px;
+    display: block;
+    margin: auto;
+    margin-top: 15px;
+
+  }
+
+  .section_right button {
+    width: 85vw;
+    max-width: 324px;
     font-size: 16px;
-    background-color: var(--main-color);
-    color: #FFFFFF;
-    font-weight: bold;
-}
-
-
-.section_right p{
-    margin-top: 11px;
-    font-size: 13px;
-    color: #FFFFFF;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: auto;
+    margin-top: 14px;
+    display: block;
+  }
 }
