--- a/src/components/CartList/cartList.module.css
+++ b/src/components/CartList/cartList.module.css
@@ -1,6 +1,23 @@
 .carlist{
-  background-color: red;
   position: absolute;
+  background-color: white;
   z-index: 2;
-  right:20px;
+  right:40px;
+  padding:2em;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  border: 1px solid rgb(194, 193, 193);
+}
+
+.emptyCartBtn{
+  background-color: var(--main-color);
+  color: aliceblue;
+  border: none;
+  cursor: pointer;
+  padding:.4em;
+}
+
+.emptyCartBtn:hover{
+  background-color: rgba(119, 44, 232,.9);
 }
