--- a/src/components/SearchForm/searchForm.module.css
+++ b/src/components/SearchForm/searchForm.module.css
@@ -41,6 +41,7 @@
   background-position:93% 50%;
   color: var(--main-color);
   width:25%;
+  font-size: 13px;
   text-align: left;
   padding-left: 20px;
 }
@@ -68,4 +69,61 @@
   border: 1px solid #fff;
   border-radius: 18px;
   color: #fff;
+}
+
+@media (max-width: 1220px){
+
+  .btnCategories {
+    width:40%;
+    font-size: 12px;
+  }
+
+}
+
+@media (max-width: 987px){
+
+  .btnCategories {
+    width:50%;
+    font-size: 12px;
+  }
+
+  .inputSearch {
+    width: 50%
+  }
+
+}
+
+@media (max-width: 768px){
+  .btnSearch {
+   display: none;
+  }
+  
+  .btnFilter {
+  display: none;
+  }
+
+  .btnCategories {
+  display:none;
+  }
+
+  .inputSearch {
+    width: 100%;
+    border-radius:18px;
+    margin: 0;
+  }
+
+  .inputSection{
+    width: 100%;
+    display:flex;
+    justify-content: center;
+  }
+
+  .form{
+    gap: 0;
+  }
+
+  .searchSection{
+    display:flex;justify-content: center;
+    margin: 0 auto;
+  }
 }
