--- a/src/components/SliderIcon/sliderIcon.module.css
+++ b/src/components/SliderIcon/sliderIcon.module.css
@@ -29,6 +29,13 @@
     border-radius: 8px;
     position: relative;
     z-index: 999;
+    opacity: 1;    
+    filter: invert(18%) sepia(89%) saturate(5302%) hue-rotate(264deg) brightness(95%) contrast(90%);
+
+}
+
+.imgs img:hover ~ p{
+    color: var(--main-color);
     opacity: 1;
 }
 
