--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -3,6 +3,10 @@
   flex-direction: column;
   height: 132px;
   padding-top: 11px;
+  position: sticky;
+  top: 0;
+  z-index: 50;
+  background-color: #fff;
 }
 
 .brandSection {
