--- a/src/pages/ProductDetail/productDetail.module.css
+++ b/src/pages/ProductDetail/productDetail.module.css
@@ -4,12 +4,15 @@
   width: calcl(100% - 10em);
   margin: 5em;
   background-color: rgb(255, 255, 255);
+  justify-content: center;
+
 }
 
 .imagesContainer {
   display: flex;
   flex-direction: column;
   gap: 1em;
+  margin-right: 5vw;
 }
 
 .imageContainer {
@@ -25,24 +28,44 @@
 
 .mainImage{
   width: 40%;
-  display: flex;
   justify-content: center;
-  margin: 0em 8em;
+  margin: auto;
+}
+
+.DetailHr{
+  margin: 0 2em;
 }
 
 .infoProductContainer{
   border-radius: 5px;
-  border: 1px solid grey;
-  padding: 3em;
+  border: 1px solid rgba(0,0,0,.1);
+  padding: 3.4em;
+}
+
+.infoProductName{
+  padding: 0;
+  margin-right: 15px;
+  margin-bottom: 8px;
+  font-size: 22px;
+  color: rgba(0,0,0,.9);
+}
+
+.infoProductPrice{
+  font-size: 29px;
+  font-weight: 300;
 }
 
 .descriptionContainer{
-  margin-top: 2em;
-  width: 100%;
+  margin: 2em 1em;
+  width: 80%;
 }
 
 .detailContainer{
   padding-top: 1.5em;
+}
+
+.descriptionContainer h3{
+  margin-bottom: 1.5em;
 }
 .detailContainer a:first-child{
   margin-left: 5em;
@@ -51,4 +74,27 @@
 
 .detailContainer a:not(:first-child){ 
   margin-left: .5em;
+}
+
+.Detail_btn{
+  background-color: var(--main-color);
+  border-radius: 31px;
+  width: 100%;
+  height: 48px;
+  color: #FFFFFF;
+  font-weight: bold;
+  font-size: 18px;
+  border:none;
+  cursor: pointer;
+  margin-top: 2em;
+}
+
+@media screen and (max-width:768px) {
+  .imagesContainer{
+    flex-direction: row;
+  }
+  .mainImage{
+    width: 50%;
+  }
+  
 }
