Cart and detail product

--- a/src/components/SearchForm/searchForm.module.css
+++ b/src/components/SearchForm/searchForm.module.css
@@ -44,24 +44,31 @@
   font-size: 13px;
   text-align: left;
   padding-left: 20px;
+  cursor: pointer; 
 }
 
 .btnsSection {
   display: flex;
   gap: 8px;
   margin-right: 71px;
+  cursor: pointer; 
 }
 
 .btnSearch {
   width:139px;
   text-align: center;
+  cursor: pointer; 
 }
+
+.btnSearch:hover {
+  background-color:rgba(119, 44, 232,.9);}
 
 .btnFilter {
   width:115px;
   background: url("../../assets/icons/icon-filter.svg") no-repeat;
   background-position:20px 50%;
   padding-left: 20px;
+  cursor: pointer; 
 }
 
 .btns {
