--- a/src/pages/ProductDetail/productDetail.module.css
+++ b/src/pages/ProductDetail/productDetail.module.css
@@ -1,18 +1,19 @@
 .detailContent {
   display: flex;
   flex-wrap: wrap;
-  width: calcl(100% - 10em);
-  margin: 5em;
+  width: 100%;
+  margin: 1em;
   background-color: rgb(255, 255, 255);
-  justify-content: center;
+
 
 }
 
 .imagesContainer {
   display: flex;
-  flex-direction: column;
+  width: 300px;
   gap: 1em;
   margin-right: 5vw;
+  margin-top: 100px;
 }
 
 .imageContainer {
