--- a/src/components/ProductCard/cartProduct.module.css
+++ b/src/components/ProductCard/cartProduct.module.css
@@ -1,17 +1,17 @@
 .ProductCard{
-  width: 150px;
+  width: max-content;
   display: flex;
-  flex-direction: column;
   border: 1px solid #E2E2E2;
   border-radius: 8px;
   margin: auto;
   padding:1em;
   background-color: #F7F7F7;
-
+  border-radius: 10%;
 }
 
 .ProductCard img{
-  height: 100%;
+  width: 40px;
+  margin-right: 10px;
 }
 
 .ProductCardInformation{
@@ -41,9 +41,7 @@
 }
 
 .Price_Container s{
-  font-size: 10px;
-  font-weight: 400;
-  margin-right: 8px;
+  display: none;
 }
 
 .Price_Container p{
@@ -52,14 +50,20 @@
   font-weight: bold;
 }
 
-.ProductCard_btn{
-  background-color: var(--main-color);
-  border-radius: 31px;
-  width: 70px;
-  height: 28px;
-  color: #FFFFFF;
-  font-weight: bold;
-  font-size: 10px;
-  border:none;
+.ProdutCard_btn_container{
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+  margin-left: 50px;
+}
+
+.ProdutCard_btn_container p{
+  text-align: center;
+}
+
+.ProdutCard_btn_container button{
+  border: none;
+  font-size: 21px;
+  background-color: #F7F7F7;
   cursor: pointer;
 }
