--- a/src/components/CartList/cartList.module.css
+++ b/src/components/CartList/cartList.module.css
@@ -3,14 +3,14 @@
   background-color: white;
   z-index: 2;
   right:40px;
-  padding:2em;
+  padding:.8em;
   display: flex;
   flex-direction: column;
-  gap: 1em;
+  gap: .5em;
   border: 1px solid rgb(194, 193, 193);
 }
 
-.emptyCartBtn{
+.emptyCart{
   background-color: var(--main-color);
   color: aliceblue;
   border: none;
@@ -18,6 +18,27 @@
   padding:.4em;
 }
 
-.emptyCartBtn:hover{
+.emptyCart:hover{
+  background-color: rgba(119, 44, 232,.9);
+}
+
+.PriceContainer{
+  display: flex;
+  justify-content: space-around;
+}
+
+.PayContainer_Btn{
+  text-align: center;
+  margin-top: 10px;
+}
+.PayContainer button{
+  background-color: var(--main-color);
+  color: aliceblue;
+  border: none;
+  cursor: pointer;
+  padding:.4em;
+}
+
+.PayContainer button:hover{
   background-color: rgba(119, 44, 232,.9);
 }
