--- a/src/components/CartList/cartList.module.css
+++ b/src/components/CartList/cartList.module.css
@@ -3,16 +3,20 @@
   background-color: white;
   z-index: 2;
   right:40px;
-  padding:.8em;
+  padding:3em;
   display: flex;
   flex-direction: column;
-  gap: .5em;
+  gap: 3em;
+  border-radius: 8px;
   border: 1px solid rgb(194, 193, 193);
+  overflow-y: auto;
+  height:400px;
+  width:350px;
 }
 
 .emptyCart{
   background-color: var(--main-color);
-  color: aliceblue;
+  color: #fff;
   border: none;
   cursor: pointer;
   padding:.4em;
@@ -35,10 +39,18 @@
   background-color: var(--main-color);
   color: aliceblue;
   border: none;
+  width: 100%;
+  margin-top: 20px;
   cursor: pointer;
-  padding:.4em;
+  padding:.7em;
 }
 
 .PayContainer button:hover{
   background-color: rgba(119, 44, 232,.9);
+}
+
+.notProducts{
+  color: rgba(119, 44, 232,.9);
+  font-size: 1.3em;
+  
 }
