--- a/src/components/ProductCard/cartProduct.module.css
+++ b/src/components/ProductCard/cartProduct.module.css
@@ -7,8 +7,21 @@
   padding:1em;
   background-color: #F7F7F7;
   border-radius: 10%;
+  width: 230px;
+box-shadow: 1px 1px 9px -3px rgb(136, 224, 220);
+
 }
 
+
+.containerCart{
+  display: flex;
+  flex-direction: column;
+}
+
+.containerCart a{
+  display: flex;
+  justify-content: space-between;
+}
 .ProductCard img{
   width: 40px;
   margin-right: 10px;
@@ -17,8 +30,6 @@
 .ProductCardInformation{
   text-align: center;
   height: 100%;
-
-
 }
 
 .ProductCardInformation_title{
@@ -38,6 +49,21 @@
   display: flex;
   justify-content: space-evenly;
   margin-bottom: 16px;
+}
+
+.btnDelete{
+  background-color: rgb(243, 30, 30) ;
+  border: none;
+  padding:.3em;
+  color: #fff;
+  width: 100px;
+  margin: 20px auto;
+cursor: pointer;
+}
+
+.btnDelete:hover{
+  background-color: rgba(243, 30, 30,.9) ;
+
 }
 
 .Price_Container s{
