--- a/src/pages/ProductDetail/productDetail.module.css
+++ b/src/pages/ProductDetail/productDetail.module.css
@@ -9,6 +9,7 @@
 .containerAll{
   display: flex;
   margin: 20px auto;
+  flex-wrap: wrap;
  
   
 }
@@ -62,6 +63,7 @@
   border: 1px solid rgba(0,0,0,.1);
   padding: 3.4em;
   width: 500px;
+  flex:1;
 }
 
 .infoProductName{
